# train_signaling

./: CMakeLists.txt  Makefile  README.md  main.cpp
src/: dijkstra.cpp  main.cpp  merge_sort.cpp  rail_pieces.cpp  simulation.cpp  train.cpp
src/include/: dijkstra.h  merge_sort.h  rail_pieces.h  simulation.h  train.h
test/: CMakeLists.txt  TrainTests.cpp
